odoo.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: odoo
  labels:
    name: odoo
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-db
  namespace: odoo
  labels:
    app: rif-odoo
spec:
  ports:
    - port: 5432
  selector:
    app: rif-odoo
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-db
  namespace: odoo
  labels:
    app: rif-odoo
spec:
  selector:
    matchLabels:
      app: rif-odoo
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rif-odoo
        tier: backend
    spec:
      containers:
      - image: postgres:10.0
        name: odoo-db
        ports:
        - containerPort: 5432
          name: odoo-db
        volumeMounts:
        - name: odoo-db-pvc
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: odoo-db-pvc
        persistentVolumeClaim:
          claimName: odoo-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rif-odoo
  namespace: odoo
  labels:
    app: rif-odoo
spec:
  ports:
    - port: 8069
  selector:
    app: rif-odoo
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rif-odoo
  namespace: odoo
  labels:
    app: rif-odoo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rif-odoo
      tier: frontend
  template:
    metadata:
      labels:
        app: rif-odoo
        tier: frontend
    spec:
      containers:
        - image: odoo:latest
          name: odoo
          securityContext:
            privileged: true
            runAsUser: 0
          ports:
            - containerPort: 8069
              name: odoo
          volumeMounts:
          - name: odoo-pvc
            mountPath: /var/lib/odoo
      volumes:
      - name: odoo-pvc
        persistentVolumeClaim:
          claimName: odoo-pvc
